fixed navbar-brand from being too wide on mobile

--- a/public_html/stylesheets/style.less
+++ b/public_html/stylesheets/style.less
@@ -76,10 +76,15 @@ h1,h2,h3,.btn{
 #navbar{
   box-shadow: 0px 1px 10px black;
   background: linear-gradient(180deg, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%);
-  .navbar-brand img{
-    width: 10%;
-    padding-bottom: .5em;
-    display: inline;
+  .navbar-header{
+    .navbar-brand{
+      max-width: 80%;
+      img{
+        width: 15%;
+        padding-bottom: .5em;
+        display: inline;
+      }
+    }
   }
   .navbar-collapse{
     li{
